InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/vlocity_ins__FormularyDrug__c.object-meta.xml
<CustomObject>
    <description>List of generic and brand name drugs available under a health network formulary. Master-detail child object of Formulary.</description>
    <label>Formulary Drug</label>
    <nameField>
        <label>Formulary Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Drugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>