InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/fields/vlocity_ins__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Description__c</fullName>
    <description>A description of of the Formulary Drug.</description>
    <inlineHelpText>A description of of the Formulary Drug.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>