InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/fields/vlocity_ins__FillLimitForm__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FillLimitForm__c</fullName>
    <label>Fill Limit Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Hrs Patch</fullName>
            </value>
            <value>
                <fullName>24 Hrs Patch</fullName>
            </value>
            <value>
                <fullName>72 Hrs Patch</fullName>
            </value>
            <value>
                <fullName>84 Hrs Patch</fullName>
            </value>
            <value>
                <fullName>9 Hrs Patch</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
            <value>
                <fullName>Cream (Augmented)</fullName>
            </value>
            <value>
                <fullName>Douche</fullName>
            </value>
            <value>
                <fullName>Drug Implant</fullName>
            </value>
            <value>
                <fullName>Dry-Powder Inhaler (DPI)</fullName>
            </value>
            <value>
                <fullName>Enema</fullName>
            </value>
            <value>
                <fullName>Film</fullName>
            </value>
            <value>
                <fullName>Foam</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Gel</fullName>
            </value>
            <value>
                <fullName>Gel (Augmented)</fullName>
            </value>
            <value>
                <fullName>Gum</fullName>
            </value>
            <value>
                <fullName>Inhaler</fullName>
            </value>
            <value>
                <fullName>Irrigation Solution</fullName>
            </value>
            <value>
                <fullName>Lotion</fullName>
            </value>
            <value>
                <fullName>Lotion (Augmented)</fullName>
            </value>
            <value>
                <fullName>Medicated Bar Soap</fullName>
            </value>
            <value>
                <fullName>Medicated Liquid Soap</fullName>
            </value>
            <value>
                <fullName>Medicated Shampoo</fullName>
            </value>
            <value>
                <fullName>Medicated Tape</fullName>
            </value>
            <value>
                <fullName>Metered Dose Inhaler (MDI)</fullName>
            </value>
            <value>
                <fullName>Ointment</fullName>
            </value>
            <value>
                <fullName>Ointment (Augmented)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>