InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/fields/vlocity_ins__FormularyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FormularyId__c</fullName>
    <description>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</description>
    <inlineHelpText>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</inlineHelpText>
    <label>Formulary</label>
    <referenceTo>vlocity_ins__Formulary__c</referenceTo>
    <relationshipLabel>Formulary Drugs</relationshipLabel>
    <relationshipName>FormularyDrugs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>