InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/fields/vlocity_ins__FormularyTierId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FormularyTierId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</description>
    <inlineHelpText>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</inlineHelpText>
    <label>Formulary Tier</label>
    <referenceTo>vlocity_ins__FormularyTier__c</referenceTo>
    <relationshipLabel>Formulary Drugs</relationshipLabel>
    <relationshipName>FormularyDrugs</relationshipName>
    <type>Lookup</type>
</CustomField>