InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/fields/vlocity_ins__HasStepTherapy__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__HasStepTherapy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Step Therapy</label>
    <type>Checkbox</type>
</CustomField>