InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/fields/vlocity_ins__MaxFillAllowed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MaxFillAllowed__c</fullName>
    <label>Max Fill Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>