InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyDrug__c/fields/vlocity_ins__QuantityPerRefill__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QuantityPerRefill__c</fullName>
    <description>The number of fiil limit forms per refill for this drug on this formulary definition.</description>
    <inlineHelpText>The number of fiil limit forms per refill for this drug on this formulary definition.</inlineHelpText>
    <label>Quantity Per Refill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>